# mybiblioteca

./: README.md  db.sqlite3  pyproject.toml
core/: settings.py  urls.py
livro/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
livro/migrations/: 0001_initial.py  0002_alter_livros_options_alter_livros_co_autor_and_more.py  0003_alter_livros_data_cadastro.py  0004_alter_livros_data_emprestimo.py  0005_alter_livros_data_devolucao.py  0006_alter_livros_tempo_duracao.py  0007_alter_livros_data_cadastro.py  0008_alter_livros_data_cadastro.py  0009_alter_livros_data_cadastro.py  0010_alter_livros_data_cadastro.py  0011_alter_livros_data_cadastro.py  0012_categoria_alter_livros_data_cadastro_and_more.py  0013_alter_categoria_options_livros_usuario.py  0014_categoria_usuario_alter_livros_data_cadastro.py  0015_remove_livros_data_devolucao_and_more.py  0016_emprestimo_nome_emprestado_anonimo_and_more.py  0017_alter_emprestimo_data_devolucao_and_more.py  0018_remove_emprestimo_tempo_duracao_and_more.py  0019_emprestimo_avaliacao_alter_livros_data_cadastro_and_more.py  0020_alter_emprestimo_data_emprestimo.py  0021_alter_emprestimo_data_devolucao_and_more.py  0022_alter_emprestimo_avaliacao_and_more.py  0023_alter_emprestimo_data_emprestimo_and_more.py  0024_livros_img_alter_emprestimo_data_emprestimo_and_more.py  0025_alter_emprestimo_data_emprestimo_and_more.py
livro/templates/: home.html  meus_emprestimos.html  ver_livro.html
livro/templatetags/: filtros.py
templates/: base.html
usuario/: admin.py  models.py  urls.py  views.py
(+3 files in other folders)
